...
        )
    }
    
    // MARK: - Logout
    @objc private func didTapLogoutButton() {
        let alert = UIAlertController(
            title: "Выход из аккаунта",
            message: "Ты уверена, что хочешь выйти?",
            preferredStyle: .alert
        )

        alert.addAction(UIAlertAction(title: "Отмена", style: .cancel))
        alert.addAction(UIAlertAction(title: "Выйти", style: .destructive) { _ in
            ProfileLogoutService.shared.logout()
        })

        present(alert, animated: true)
    }
}
...
